--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header .acesso .entrar{
     padding: 20px;
     font-size: 20px;
     font-weight: bold;
-    border: none;
+    border-color: #fafafa;
     border-radius: 30px;
     cursor: pointer;
 }
@@ -119,7 +119,7 @@ main .projeto .curso .info-curso a{
 }
 
 main .projeto .curso .info-curso button{
-    border: none;
+    border-color: #fafafa;
     background: none;
     color: #fafafa;
     padding: 15px;
